Smaller cones, bigger grid, hide points

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
 	</script>
 
 	<body>
-		<canvas id="2d-canvas" class="2d-canvas" width="900" height="675"></canvas>
-		<canvas id="main-canvas" width="900" height="675"></canvas>
+		<canvas id="2d-canvas" class="canvas-2d" width="900" height="600"></canvas>
+		<canvas id="main-canvas" width="900" height="600"></canvas>
 	  <script src="index.js"></script>
   </body>
 </html>
