Initial batching commit

--- a/src/index.html
+++ b/src/index.html
@@ -1,47 +1,39 @@
 <html>
 <head>
 	<title>VoroPlat</title>
-  <link rel="stylesheet" href="index.css"/>
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Molengo">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cantarell">
-  <link rel="stylesheet" type="text/css" href="http://alexbeutel.com/styles.css">
+	<link rel="stylesheet" href="index.css"/>
 </head>
 
-  <script src="sylvester.js"></script>
+	<script src="sylvester.js"></script>
 	<script src="glUtils.js"></script>
 
 	<script id="shader-vs" type="x-shader/x-vertex">
-	  attribute vec3 position;
-	  attribute vec4 color;
+		attribute vec3 position;
+		attribute vec4 color;
+		attribute vec3 worldPosition;
 
-	  uniform vec2 worldPosition;
-	  uniform mat4 viewProjection;
+		uniform mat4 viewProjection;
 
-	  varying vec4 vColor;
+		varying vec4 vColor;
 
-	  void main(void) {
-			mat4 world = mat4(vec4(1,0,0,0),
-												vec4(0,1,0,0),
-												vec4(0,0,1,0),
-												vec4(worldPosition, 0, 1));
-			mat4 worldViewProjection = viewProjection * world;
-	    gl_Position = worldViewProjection * vec4(position, 1.0);
-	    vColor = color;
-	  }
+		void main(void) {
+			gl_Position = viewProjection * (vec4(worldPosition, 1.0) + vec4(position, 1.0));
+			vColor = color;
+		}
 	</script>
 
 	<script id="shader-fs" type="x-shader/x-fragment">
 		precision highp float;
-	  varying vec4 vColor;
+		varying vec4 vColor;
 
-	  void main(void) {
-	    gl_FragColor = vColor;
-	  }
+		void main(void) {
+			gl_FragColor = vColor;
+		}
 	</script>
 
 	<body>
 		<canvas id="2d-canvas" class="canvas-2d" width="900" height="600"></canvas>
 		<canvas id="main-canvas" width="900" height="600"></canvas>
-	  <script src="index2.js"></script>
-  </body>
+		<script src="index3.js"></script>
+	</body>
 </html>
