--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 		varying vec4 vColor;
 
 		void main(void) {
-			gl_Position = viewProjection * (vec4(worldPosition, 1.0) + vec4(position, 1.0));
+			gl_Position = viewProjection * vec4(worldPosition + position, 1.0);
 			vColor = color;
 		}
 	</script>
